# Connecting-Hands

./: .eslintrc.json  .gitignore  .scripts  AR_FEATURE_SUMMARY.md  DEVELOPMENT.md  FIXES_APPLIED.md  HAND_SCAN_FEATURE.md  HAND_SCAN_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  MERGE_ACTION_REQUIRED.md  MERGE_CHECKLIST.md  MERGE_CONFLICT_RESOLUTION.md  MERGE_INSTRUCTIONS.md  QA_CHECKLIST.md  README.md  READY_TO_MERGE.txt  SOLUTION_SUMMARY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/mobile/: .env.example  .eslintrc.json  AR_FEATURE.md  app.json  jest.config.js  jest.setup.js  package.json  tsconfig.json
apps/mobile/src/: theme.ts
apps/mobile/src/__tests__/: ar-integration.test.ts  arStore.test.ts  glbLoader.test.ts  handScanStore.test.ts  hapticService.test.ts
apps/mobile/src/app/: _layout.tsx  hand-scan.tsx  modal.tsx
apps/mobile/src/app/(tabs)/: _layout.tsx  ar-hand.tsx  hand-detection.tsx  index.tsx  settings.tsx  share.tsx
apps/mobile/src/components/: ARScene.tsx  CalibrationWizard.tsx  CameraCaptureScreen.tsx  CameraGuideScreen.tsx  PermissionsScreen.tsx  ReviewScreen.tsx  SuccessScreen.tsx
apps/mobile/src/hooks/: useCameraPermissions.ts  useHandScanFlow.ts
apps/mobile/src/services/: apiClient.ts  arDemoData.ts  glbLoader.ts  handScanService.ts  hapticService.ts  sharingApi.ts
apps/mobile/src/store/: appStore.ts  arStore.ts  handScanStore.ts
services/hand-modeler/: .env.example  Makefile  README.md  pyproject.toml
services/hand-modeler/app/: __init__.py  config.py  main.py  storage.py
services/hand-modeler/app/db/: models.py  session.py
services/hand-modeler/app/jobs/: __init__.py  store.py
services/hand-modeler/app/models/: hand_detection.py  hand_scan.py  health.py  sharing.py
services/hand-modeler/app/routers/: hand_detection.py  hand_models.py  hand_scan.py  hands.py  health.py  sessions.py  storage.py  users.py
services/hand-modeler/app/services/hands/: __init__.py  detector.py  job_processor.py  meshing.py  processing.py
services/hand-modeler/tests/: test_hand_meshing.py  test_hand_processing.py  test_hand_scan.py  test_hands_api.py  test_health.py  test_sharing_flow.py
